# Aveli

./: .dockerignore  .env.docker.example  .env.example  .env.example.backend  .env.example.flutter  .gitignore  .pre-commit-config.yaml  AGENT_PROMPT.md  AVELI_COURSE_DOMAIN_SPEC.md  AVELI_DATABASE_BASELINE_MANIFEST.md  Aveli_System_Decisions.md  BRA_KOMMANDON.md  ENV_REQUIRED_KEYS.txt  Inför lansering.md  Makefile  NEW_BASELINE_DESIGN_PLAN.md  README.md  Supabase_MCP.md  aveli_system_manifest.json  build_final_courses.py  docker-compose.yml  drogromantik  error_logg_terminal.md  fly.toml  github_app_clone.py  homeplayer_audit_for_media_control_plane.md  netlify.toml  package-lock.json  package.json  starta_backend.md  tasks.md  tasks_livekit.md  tasks_plan.md  tmp_inspect_user.json  tmp_logs_health.json  tmp_verify_cases.json  verify_all.sh
backend/: .env.example  .env.local.example  .env.production.example  .flake8  Dockerfile  Dockerfile.operator  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  test_email_verification.py
backend/app/: auth.py  auth_onboarding_failures.py  config.py  db.py  logging_context.py  logging_utils.py  main.py  metrics.py  models.py  permissions.py  schemas.py  stripe_mode.py
backend/bootstrap/: baseline_v2.py  baseline_v2_cutover.py  deployment_gate.py  load_env.py  run_server.py  run_worker.py
backend/docs/: mvp_api.md  sfu_mvp.md  stripe_subscriptions.md
backend/mcp_server/: main.py
backend/scripts/: __init__.py  android_logs.sh  android_sdk_setup.sh  apply_supabase_migrations.sh  backfill_media_asset_content_identity.py  (+59 more)
(+2430 files in other folders)
